--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -188,6 +188,8 @@ jobs:
           }
         }
       }
+      steps {
+        build job : '/seed_job'
+      }
       
-      build '/seed_job'
       
