--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -165,7 +165,8 @@ jobs:
       pipelineJob("seed_job") {
         displayName('Seed job')
 
-        def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
+        //def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
+        def repo = env.getEnvironment().get('TOOLS_URL')
       
         description("Seed Job")
 
