--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -163,10 +163,10 @@ tool:
 jobs:
   - script: >
       pipelineJob("seed_job") {
-        displayName('Seed job')
+        displayName('Deploy Jenkins Jobs')
 
-        //def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
-        def repo = env.getEnvironment().get('TOOLS_URL')
+        def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
+        //def repo = "$TOOLS_URL"
       
         description("Seed Job")
 
