--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -165,6 +165,7 @@ jobs:
    
       pipelineJob("seed_job") {
         displayName("Initial Seed Job")
+        description("Initial seed job to bootstrap the rest of the jenkins jobs. Safe to remove once successfully ran.")
         def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
         authorization {
           blocksInheritance()
