--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -166,7 +166,10 @@ jobs:
       pipelineJob("bootstrap-seed-job") {
         displayName("Bootstrap Seed Job")
         description("Initial seed job to bootstrap the rest of the jenkins jobs. Safe to remove once successfully ran.")
-        def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
+        
+        //def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
+        def tools_url = getBinding().getVariables().getOrDefault('TOOLS_URL', 'NotSet')
+      
         authorization {
           blocksInheritance()
           permissionAll('admin') 
@@ -175,7 +178,7 @@ jobs:
           cpsScm {
             scm {
               git {
-                remote { url(repo) }
+                remote { url(tools_url) }
                 branches("main")
                 scriptPath('seed_job/Jenkinsfile')
                 extensions { }  // required as otherwise it may try to tag the repo, which you may not want
