--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -167,8 +167,8 @@ jobs:
         displayName("Bootstrap Seed Job")
         description("Initial seed job to bootstrap the rest of the jenkins jobs. Safe to remove once successfully ran.")
         
-        //def repo = 'https://github.com/antman25/jenkins-shared-lib.git'
-        def tools_url = getBinding().getVariables().getOrDefault('TOOLS_URL', 'NotSet')
+        def tools_url = 'https://github.com/antman25/jenkins-shared-lib.git'
+        //def tools_url = getBinding().getVariables().getOrDefault('TOOLS_URL', 'NotSet')
       
         authorization {
           blocksInheritance()
