--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,26 +2,26 @@ global:
   bitbucket_url: http://bitbucket.antlinux.local:7990
   nexus_url: http://nexus.antlinux.local:8443
 tenants:
-  - name: grpA
+  - tenant_name: grpA
     perm_groups:
       - groupa
     project_list:
       - prjA1
-  - name: grpB
+  - tenant_name: grpB
     perm_groups:
       - groupb
       - groupa
     project_list:
       - prjB1
       - prjB2
-  - name: grpC
+  - tenant_name: grpC
     perm_groups:
       - groupc
     project_list:
       - prjC1
       - prjC2
       - prjC3
-  - name: grpD
+  - tenant_name: grpD
     perm_groups:
       - groupd
     project_list:
