--- a/job_automation/Jenkinsfile
+++ b/job_automation/Jenkinsfile
@@ -1,13 +1,12 @@
 try
 {
     library "jenkins-shared-lib@${BRANCH_NAME}"
+    println("Loaded jenkins-shared-lib from branch: ${BRANCH_NAME}")
 }
 catch (Exception ex)
 {
     println("Problem using BRANCH_NAME, trying main")
     library "jenkins-shared-lib@main"
 }
-
-//git branch: 'main', url: 'https://github.com/antman25/jenkins-shared-lib.git'
 
 createBuildJobs()
