--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -165,7 +165,7 @@ jobs:
   - script: >
    
       pipelineJob("bootstrap-seed-job") {
-        displayName("Bootstrap Seed Job")
+        displayName("Seed Job")
         description("Initial seed job to bootstrap the rest of the jenkins jobs. Safe to remove once successfully ran.")
         
         def tools_url = 'https://github.com/antman25/jenkins-shared-lib.git'
