--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -166,7 +166,7 @@ jobs:
    
       pipelineJob("bootstrap-seed-job") {
         displayName("Seed Job")
-        description("Initial seed job to bootstrap the rest of the jenkins jobs. Safe to remove once successfully ran.")
+        description("Initial seed job to bootstrap the rest of the jenkins jobs.")
         
         def tools_url = 'https://github.com/antman25/jenkins-shared-lib.git'
       
