--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -164,8 +164,8 @@ tool:
 jobs:
   - script: >
    
-      pipelineJob("bootstrap-seed-job") {
-        displayName("999 - Seed Job")
+      pipelineJob("deploy-jobs-main-branch") {
+        displayName("999 - Deploy All Jobs - main Branch")
         description("Initial seed job to bootstrap the rest of the jenkins jobs.")
         
         def tools_url = 'https://github.com/antman25/jenkins-shared-lib.git'
