--- a/job-automation/jenkinsfiles/branch-cleanup/Jenkinsfile
+++ b/job-automation/jenkinsfiles/branch-cleanup/Jenkinsfile
@@ -1,5 +1,18 @@
 podTemplate {
     node(POD_LABEL) {
+        def deleteChildren(items) {
+          items.each { item ->
+            /*if (item.class.canonicalName == 'com.cloudbees.hudson.plugins.folder.Folder') {
+              if (jobsToDelete.contains(item.fullName)) {
+                println(item.fullName)
+                //item.delete()
+              }
+            } else {
+            deleteChildren(((com.cloudbees.hudson.plugins.folder.Folder) item).getItems())
+            }*/
+          }
+        }
+
         stage('Clone code') {
             checkout scm
         }
@@ -7,8 +20,28 @@ podTemplate {
         stage('Clean Testing Area')
         {
             echo "clean old folders"
-            deleteDir('devel')
 
+            import hudson.model.*
+
+            jobsToDelete = ["aFolder/aJobInFolder","topLevelJob"]
+
+            deleteChildren()
+
+            def items = Hudson.instance.items
+
+            items.each { item ->
+                if (item.class.canonicalName == 'com.cloudbees.hudson.plugins.folder.Folder')
+                {
+                    println(item.fullName)
+                    //item.delete()
+                }
+            }
+
+        }
+
+        stage('Cleanup')
+        {
+            cleanWs()
         }
     }
 }
