--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -179,7 +179,8 @@ jobs:
               branchSource {
                   source {
                       git {
-                          remote ('https://github.com/antman25/jenkins-shared-lib.git')
+                          //remote ('https://github.com/antman25/jenkins-shared-lib.git')
+                          remote(env.TOOLS_URL)
                           // all id's must be unique according to docs
                           id ('deploy-production-jobs-source-id')
                           traits {
